<resources>
    <string name="app_name">智环技术</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_user">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_register">注册</string>
    <string name="action_set">设置</string>
    <string name="action_control">控制</string>
    <string name="action_confirm">确认</string>
    <string name="action_forgetPassword">忘记密码？</string>

    <string name="UserName">用户名</string>
    <string name="phoneNumber_pass">电话/找回密码使用务必正确</string>
    <string name="email_pass">Email/找回密码使用务必正确</string>
    <string name="area">小区</string>
    <string name="action_addDevice">添加设备</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="esp_esptouch">Esp Touch</string>
    <string name="esp_esptouch_version">EspTouch v0.3.2</string>
    <string name="esp_esptouch_current_ssid">当前的SSID: %1$s</string>
    <string name="esp_esptouch_configure_ssid">请选择要配置到的Wifi</string>
    <string name="esp_esptouch_ssid_hint">请输入Wifi名称</string>
    <string name="esp_esptouch_pwd_hint">请输入Wifi密码</string>
    <string name="esp_esptouch_show_pwd">显示密码</string>
    <string name="esp_esptouch_isSsidHidden">隐藏SSID</string>
    <string name="esp_esptouch_delete_pwd">删除密码</string>
    <string name="esp_esptouch_cannot_find_ap_hing">无法找到路由器: %1$s</string>
    <string name="esp_esptouch_connection_hint">请先连上一个Wifi</string>
    <string name="esp_esptouch_configure_message">正在配往 %1$s</string>
    <string name="esp_esptouch_result_suc">配置成功</string>
    <string name="esp_esptouch_result_failed">配置失败</string>
    <string name="esp_esptouch_result_over">配置结束，因当前连接的WIFI与配置的WIFI不同，无法收到反馈，请自行检查结果。</string>
    <string name="esp_esptouch_result_cancel">取消配置</string>

    <string name="send_text_default">这段文字发送自微信SDK示例程序</string>
    <string name="app_ok">确定</string>
    <string name="app_cancel">取消</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="show_from_wx_tip">这个界面用于显示微信向第三方app请求显示的信息</string>

    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_smart_config">SmartConfigActivity</string>

    <string name="weibosdk_demo_token_to_string_format_1">Token：%1$s \n有效期：%2$s</string>
    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="weibosdk_demo_token_has_existed">Token 仍在有效期内，无需再次登录。</string>
</resources>
