<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a15096.myapplication.RegisterActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5.0dip"
        android:layout_marginTop="10.0dip"
        android:orientation="vertical"
        android:touchscreenBlocksFocus="false">
        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/UserName" />
        <EditText
            android:id="@+id/register_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/phoneNumber_pass"/>
        <EditText
            android:id="@+id/register_EmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_pass"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/register_textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />
        <EditText
            android:id="@+id/register_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/area"
            android:inputType="textPostalAddress" />
        <Button
        android:id="@+id/btn_confirm_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_confirm"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
